tentando arrumar o javascript do more_and_less_functionality

--- a/app/assets/stylesheets/chose_seats_and_more/index.css
+++ b/app/assets/stylesheets/chose_seats_and_more/index.css
@@ -631,13 +631,15 @@
   /* solid rgb(152, 170, 236) color active */
 }
 
-.container-all-tickets-svg {
+.container-all-tickets-svg-1,
+.container-all-tickets-svg-2 {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 50rem;
   height: 100%;
 }
+
 
 .container-ticket-svg {
   width: 3rem;
@@ -663,4 +665,110 @@
 .button-skip:hover {
   background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
     linear-gradient(to right, rgb(255, 206, 0), rgb(255, 136, 0));
+}
+
+.container-warn-not-all-seats-were-selected {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: rgb(21 24 25 / 63%);
+  color: #fff;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container-warn {
+  display: flex;
+  flex-direction: column;
+  width: 19rem;
+  height: 23rem;
+}
+
+.container-img-background-dark {
+  background-image: url(https://res.cloudinary.com/dyqsqg7pk/image/upload/v1713697148/dark_cfnstp.jpg);
+  background-size: contain;
+  position: relative;
+  width: 100%;
+  height: 45%;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+}
+
+.container-cut-img {
+  width: 100%;
+  height: 40px;
+  position: absolute;
+  bottom: 0;
+  background-color: transparent;
+  background-image: -webkit-radial-gradient(50% -1px, circle cover, transparent 27px, rgb(4, 18, 24) 0px);
+}
+
+.container-svg-warn {
+  position: absolute;
+  left: 128px;
+  top: 25px;
+
+  >svg {
+    display: block;
+  }
+}
+
+.container-svg-exit-warning {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  width: 25px;
+  cursor: pointer;
+}
+
+.container-spans-and-warn-button-continue {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 10px 16px 16px 16px;
+  background: rgb(4, 18, 24);
+}
+
+.container-span-ops-and-warn {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.span-ops {
+  width: 100%;
+  font-size: 14px;
+  font-weight: 500;
+  text-align: left;
+  color: rgb(255, 255, 255);
+}
+
+.span-warn {
+  font-size: 13px;
+}
+
+.button-continue {
+  color: rgb(33, 38, 45);
+  background-image: linear-gradient(to right, rgb(255, 206, 0), rgb(255, 136, 0));
+  border-radius: 8px;
+  padding: 9px 30px;
+  width: 9rem;
+  font-weight: 700;
+  border: none;
+  font-size: 13px;
+}
+
+.button-continue:hover {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    linear-gradient(to right, rgb(255, 206, 0), rgb(255, 136, 0));
+}
+
+.svg-warning {
+  display: none;
 }
