--- a/app/views/chose_seats_and_more/index.html.erb
+++ b/app/views/chose_seats_and_more/index.html.erb
@@ -10,11 +10,11 @@
       <%= render "chose_seats_and_more_svg_partial/svg_tickets" %>
     </div>
     <span class="span-types-tickets">TIPOS DE INGRESSOS</span>
-    <div class="line-white-1"></div>
+    <div class="line-white-2"></div>
     <div class="div-svg-bomboniere">
       <%= render "chose_seats_and_more_svg_partial/svg_bomboniere" %>
     </div>
-    <div class="line-white-1"></div>
+    <div class="line-white-3"></div>
     <div class="div-svg-payment">
       <%= render "chose_seats_and_more_svg_partial/svg_payment" %>
     </div>
@@ -177,7 +177,9 @@
   </div>
   <div class="container-back-skip">
     <div class="container-button-back"><button class="button-back">VOLTAR</button></div>
-    <div class="container-all-tickets-svg"></div>
+    <div class="container-all-tickets-svg-1"></div>
+    <div class="container-all-tickets-svg-2"></div>
     <div class="container-button-skip"><button class="button-skip">AVANÇAR</button></div>
   </div>
 </div>
+<%= render "chose_seats_and_more_svg_partial/svg_warning" %>
