arrumando javascript chose_seats index html

--- a/app/views/chose_seats_and_more/index.html.erb
+++ b/app/views/chose_seats_and_more/index.html.erb
@@ -65,6 +65,8 @@
     </div>
     <%= render "chose_seats_and_more_partial/order_summary" %>
     <%= render "chose_seats_and_more_partial/tickets" %>
+    <div class="container-all-type-popcorn-drink-candy">
+    </div>
   </div>
   <div class="container-back-skip">
     <div class="container-button-back"><button class="button-back">VOLTAR</button></div>
