criando controller form_of_payments

--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -43,6 +43,12 @@
     </a>
   </li>
   <li class="nav-item">
+    <a class="nav-link" href="<%= admin_form_of_payments_path %>">
+      <i class="fa-brands fa-product-hunt"></i>
+      <span>Form Of Payment</span>
+    </a>
+  </li>
+  <li class="nav-item">
     <a class="nav-link" data-method="delete" href="<%= destroy_user_session_path %>">
       <i class="fa-solid fa-right-from-bracket"></i>
       <span>Sair</span>
