pegando todos os form_of_payment no chose_seats controller atraves do movie_id e cinema_id

--- a/app/views/admin/form_of_payments/_form_of_payment.html.erb
+++ b/app/views/admin/form_of_payments/_form_of_payment.html.erb
@@ -1,2 +1,18 @@
 <div id="<%= dom_id form_of_payment %>">
+  <p>
+    <strong>Form Name:</strong>
+    <%= form_of_payment.form_name %>
+  </p>
+  <p>
+    <strong>Price:</strong>
+    <%= form_of_payment.price %>
+  </p>
+  <p>
+    <strong>Movie Id:</strong>
+    <%= form_of_payment.movie_id %>
+  </p>
+  <p>
+    <strong>Cinema Id:</strong>
+    <%= form_of_payment.cinema_id %>
+  </p>
 </div>
