criando addtional_food_movie tabela arrumando controller arrumando as views

--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -49,6 +49,12 @@
     </a>
   </li>
   <li class="nav-item">
+    <a class="nav-link" href="<%= admin_additional_food_movies_path %>">
+      <i class="fa-brands fa-product-hunt"></i>
+      <span>Additional Food Movie</span>
+    </a>
+  </li>
+  <li class="nav-item">
     <a class="nav-link" data-method="delete" href="<%= destroy_user_session_path %>">
       <i class="fa-solid fa-right-from-bracket"></i>
       <span>Sair</span>
