--- a/app/views/chose_seats_and_more/index.html.erb
+++ b/app/views/chose_seats_and_more/index.html.erb
@@ -65,7 +65,145 @@
     </div>
     <%= render "chose_seats_and_more_partial/order_summary" %>
     <%= render "chose_seats_and_more_partial/tickets" %>
-    <div class="container-all-type-popcorn-drink-candy">
+    <div class="container-bomboniere">
+      <div class="container-info-top">
+        <span>Que tal uma pipoca, bebida ou doce pra acompanhar o filme?</span>
+      </div>
+      <div class="container-default">
+        <button>Padrão</button>
+      </div>
+      <div class="container-all-bomboniere-items">
+        <div class="container-item-bombienere">
+          <div class="container-item-img">
+            <img src="https://res.cloudinary.com/dyqsqg7pk/image/upload/v1713872853/2zu9sswlmwuk6v5jgoskw96hfkdw.png" alt="item1">
+          </div>
+          <div class="container-item-info">
+            <span class="span-title-1">Combo g ref caramelo</span>
+            <div class="container-item-info-inner">
+              <span class="span-title-2">Combo g ref caramelo</span>
+              <div class="container-price-fee-button-more-and-less">
+                <div class="container-price-fee">
+                  <span class="span-price">R$ 51,00</span>
+                  <span class="span-fee">+ taxa R$ 5,59</span>
+                </div>
+                <div class="container-less-more-chose-bomboniere">
+                  <div class="container-less-svg-chose-bomboniere">
+                    <%= render "chose_seats_and_more_svg_partial/svg_less" %>
+                  </div>
+                  <span class="count-number-tickets-chose-bomboniere">0</span>
+                  <div class="container-more-svg-chose-bomboniere">
+                    <%= render "chose_seats_and_more_svg_partial/svg_more" %>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container-item-bombienere">
+          <div class="container-item-img">
+            <img src="https://res.cloudinary.com/dyqsqg7pk/image/upload/v1713872853/2zu9sswlmwuk6v5jgoskw96hfkdw.png" alt="item1">
+          </div>
+          <div class="container-item-info">
+            <span class="span-title-1">Combo g ref caramelo</span>
+            <div class="container-item-info-inner">
+              <span class="span-title-2">Combo g ref caramelo</span>
+              <div class="container-price-fee-button-more-and-less">
+                <div class="container-price-fee">
+                  <span class="span-price">R$ 51,00</span>
+                  <span class="span-fee">+ taxa R$ 5,59</span>
+                </div>
+                <div class="container-less-more-chose-bomboniere">
+                  <div class="container-less-svg-chose-bomboniere">
+                    <%= render "chose_seats_and_more_svg_partial/svg_less" %>
+                  </div>
+                  <span class="count-number-tickets-chose-bomboniere">0</span>
+                  <div class="container-more-svg-chose-bomboniere">
+                    <%= render "chose_seats_and_more_svg_partial/svg_more" %>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container-item-bombienere">
+          <div class="container-item-img">
+            <img src="https://res.cloudinary.com/dyqsqg7pk/image/upload/v1713872853/2zu9sswlmwuk6v5jgoskw96hfkdw.png" alt="item1">
+          </div>
+          <div class="container-item-info">
+            <span class="span-title-1">Combo g ref caramelo</span>
+            <div class="container-item-info-inner">
+              <span class="span-title-2">Combo g ref caramelo</span>
+              <div class="container-price-fee-button-more-and-less">
+                <div class="container-price-fee">
+                  <span class="span-price">R$ 51,00</span>
+                  <span class="span-fee">+ taxa R$ 5,59</span>
+                </div>
+                <div class="container-less-more-chose-bomboniere">
+                  <div class="container-less-svg-chose-bomboniere">
+                    <%= render "chose_seats_and_more_svg_partial/svg_less" %>
+                  </div>
+                  <span class="count-number-tickets-chose-bomboniere">0</span>
+                  <div class="container-more-svg-chose-bomboniere">
+                    <%= render "chose_seats_and_more_svg_partial/svg_more" %>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container-item-bombienere">
+          <div class="container-item-img">
+            <img src="https://res.cloudinary.com/dyqsqg7pk/image/upload/v1713872853/2zu9sswlmwuk6v5jgoskw96hfkdw.png" alt="item1">
+          </div>
+          <div class="container-item-info">
+            <span class="span-title-1">Combo g ref caramelo</span>
+            <div class="container-item-info-inner">
+              <span class="span-title-2">Combo g ref caramelo</span>
+              <div class="container-price-fee-button-more-and-less">
+                <div class="container-price-fee">
+                  <span class="span-price">R$ 51,00</span>
+                  <span class="span-fee">+ taxa R$ 5,59</span>
+                </div>
+                <div class="container-less-more-chose-bomboniere">
+                  <div class="container-less-svg-chose-bomboniere">
+                    <%= render "chose_seats_and_more_svg_partial/svg_less" %>
+                  </div>
+                  <span class="count-number-tickets-chose-bomboniere">0</span>
+                  <div class="container-more-svg-chose-bomboniere">
+                    <%= render "chose_seats_and_more_svg_partial/svg_more" %>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container-item-bombienere">
+          <div class="container-item-img">
+            <img src="https://res.cloudinary.com/dyqsqg7pk/image/upload/v1713872853/2zu9sswlmwuk6v5jgoskw96hfkdw.png" alt="item1">
+          </div>
+          <div class="container-item-info">
+            <span class="span-title-1">Combo g ref caramelo</span>
+            <div class="container-item-info-inner">
+              <span class="span-title-2">Combo g ref caramelo</span>
+              <div class="container-price-fee-button-more-and-less">
+                <div class="container-price-fee">
+                  <span class="span-price">R$ 51,00</span>
+                  <span class="span-fee">+ taxa R$ 5,59</span>
+                </div>
+                <div class="container-less-more-chose-bomboniere">
+                  <div class="container-less-svg-chose-bomboniere">
+                    <%= render "chose_seats_and_more_svg_partial/svg_less" %>
+                  </div>
+                  <span class="count-number-tickets-chose-bomboniere">0</span>
+                  <div class="container-more-svg-chose-bomboniere">
+                    <%= render "chose_seats_and_more_svg_partial/svg_more" %>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="container-back-skip">
