--- a/app/assets/stylesheets/chose_seats_and_more/index.css
+++ b/app/assets/stylesheets/chose_seats_and_more/index.css
@@ -61,20 +61,25 @@
   }
 }
 
-.span-chose-ofseats {
+.span-chose-ofseats,
+.span-types-tickets,
+.span-bomboniere {
   font-size: 12px;
   color: rgb(173, 182, 194);
   position: absolute;
-  left: -48px;
   top: 58px;
 }
 
+.span-chose-ofseats {
+  left: -48px;
+}
+
 .span-types-tickets {
-  font-size: 12px;
-  color: rgb(173, 182, 194);
-  position: absolute;
   left: 134px;
-  top: 58px;
+}
+
+.span-bomboniere {
+  left: 332px;
 }
 
 .line-white-seats-type-tickets-bomboniere-payment {
@@ -611,17 +616,31 @@
   width: 59rem;
   user-select: none;
   background: rgb(33 38 45);
+  padding: 15px 15px;
 }
 
 .container-info-top {
   color: #fff;
+
+  >span {
+    font-weight: 600;
+  }
+}
+
+.container-default {
+  >button {
+    background: rgb(152, 170, 236);
+    border: none;
+    border-radius: 35px;
+    color: black;
+    font-weight: 600;
+  }
 }
 
 .container-all-bomboniere-items {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 15px;
-  padding: 0px 13px;
 }
 
 .container-item-bombienere {
