--- a/app/views/chose_seats_and_more/index.html.erb
+++ b/app/views/chose_seats_and_more/index.html.erb
@@ -10,6 +10,7 @@
       <%= render "chose_seats_and_more_svg_partial/svg_tickets" %>
     </div>
     <span class="span-types-tickets">TIPOS DE INGRESSOS</span>
+    <span class="span-bomboniere">BOMBONIERE</span>
     <div class="line-white-2"></div>
     <div class="div-svg-bomboniere">
       <%= render "chose_seats_and_more_svg_partial/svg_bomboniere" %>
@@ -73,136 +74,34 @@
         <button>Padrão</button>
       </div>
       <div class="container-all-bomboniere-items">
-        <div class="container-item-bombienere">
-          <div class="container-item-img">
-            <img src="https://res.cloudinary.com/dyqsqg7pk/image/upload/v1713872853/2zu9sswlmwuk6v5jgoskw96hfkdw.png" alt="item1">
-          </div>
-          <div class="container-item-info">
-            <span class="span-title-1">Combo g ref caramelo</span>
-            <div class="container-item-info-inner">
-              <span class="span-title-2">Combo g ref caramelo</span>
-              <div class="container-price-fee-button-more-and-less">
-                <div class="container-price-fee">
-                  <span class="span-price">R$ 51,00</span>
-                  <span class="span-fee">+ taxa R$ 5,59</span>
-                </div>
-                <div class="container-less-more-chose-bomboniere">
-                  <div class="container-less-svg-chose-bomboniere">
-                    <%= render "chose_seats_and_more_svg_partial/svg_less" %>
+        <% @additional_food_movies.each do | afm | %>
+          <div class="container-item-bombienere">
+            <div class="container-item-img">
+              <%= image_tag afm.image_main %>
+            </div>
+            <div class="container-item-info">
+              <span class="span-title-1"><%= afm.title %></span>
+              <div class="container-item-info-inner">
+                <span class="span-title-2"><%= afm.title %></span>
+                <div class="container-price-fee-button-more-and-less">
+                  <div class="container-price-fee">
+                    <span class="span-price">R$ <%= afm.price %></span>
+                    <span class="span-fee">+ taxa R$ <%= afm.fee %></span>
                   </div>
-                  <span class="count-number-tickets-chose-bomboniere">0</span>
-                  <div class="container-more-svg-chose-bomboniere">
-                    <%= render "chose_seats_and_more_svg_partial/svg_more" %>
+                  <div class="container-less-more-chose-bomboniere">
+                    <div class="container-less-svg-chose-bomboniere">
+                      <%= render "chose_seats_and_more_svg_partial/svg_less" %>
+                    </div>
+                    <span class="count-number-tickets-chose-bomboniere">0</span>
+                    <div class="container-more-svg-chose-bomboniere">
+                      <%= render "chose_seats_and_more_svg_partial/svg_more" %>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="container-item-bombienere">
-          <div class="container-item-img">
-            <img src="https://res.cloudinary.com/dyqsqg7pk/image/upload/v1713872853/2zu9sswlmwuk6v5jgoskw96hfkdw.png" alt="item1">
-          </div>
-          <div class="container-item-info">
-            <span class="span-title-1">Combo g ref caramelo</span>
-            <div class="container-item-info-inner">
-              <span class="span-title-2">Combo g ref caramelo</span>
-              <div class="container-price-fee-button-more-and-less">
-                <div class="container-price-fee">
-                  <span class="span-price">R$ 51,00</span>
-                  <span class="span-fee">+ taxa R$ 5,59</span>
-                </div>
-                <div class="container-less-more-chose-bomboniere">
-                  <div class="container-less-svg-chose-bomboniere">
-                    <%= render "chose_seats_and_more_svg_partial/svg_less" %>
-                  </div>
-                  <span class="count-number-tickets-chose-bomboniere">0</span>
-                  <div class="container-more-svg-chose-bomboniere">
-                    <%= render "chose_seats_and_more_svg_partial/svg_more" %>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="container-item-bombienere">
-          <div class="container-item-img">
-            <img src="https://res.cloudinary.com/dyqsqg7pk/image/upload/v1713872853/2zu9sswlmwuk6v5jgoskw96hfkdw.png" alt="item1">
-          </div>
-          <div class="container-item-info">
-            <span class="span-title-1">Combo g ref caramelo</span>
-            <div class="container-item-info-inner">
-              <span class="span-title-2">Combo g ref caramelo</span>
-              <div class="container-price-fee-button-more-and-less">
-                <div class="container-price-fee">
-                  <span class="span-price">R$ 51,00</span>
-                  <span class="span-fee">+ taxa R$ 5,59</span>
-                </div>
-                <div class="container-less-more-chose-bomboniere">
-                  <div class="container-less-svg-chose-bomboniere">
-                    <%= render "chose_seats_and_more_svg_partial/svg_less" %>
-                  </div>
-                  <span class="count-number-tickets-chose-bomboniere">0</span>
-                  <div class="container-more-svg-chose-bomboniere">
-                    <%= render "chose_seats_and_more_svg_partial/svg_more" %>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="container-item-bombienere">
-          <div class="container-item-img">
-            <img src="https://res.cloudinary.com/dyqsqg7pk/image/upload/v1713872853/2zu9sswlmwuk6v5jgoskw96hfkdw.png" alt="item1">
-          </div>
-          <div class="container-item-info">
-            <span class="span-title-1">Combo g ref caramelo</span>
-            <div class="container-item-info-inner">
-              <span class="span-title-2">Combo g ref caramelo</span>
-              <div class="container-price-fee-button-more-and-less">
-                <div class="container-price-fee">
-                  <span class="span-price">R$ 51,00</span>
-                  <span class="span-fee">+ taxa R$ 5,59</span>
-                </div>
-                <div class="container-less-more-chose-bomboniere">
-                  <div class="container-less-svg-chose-bomboniere">
-                    <%= render "chose_seats_and_more_svg_partial/svg_less" %>
-                  </div>
-                  <span class="count-number-tickets-chose-bomboniere">0</span>
-                  <div class="container-more-svg-chose-bomboniere">
-                    <%= render "chose_seats_and_more_svg_partial/svg_more" %>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="container-item-bombienere">
-          <div class="container-item-img">
-            <img src="https://res.cloudinary.com/dyqsqg7pk/image/upload/v1713872853/2zu9sswlmwuk6v5jgoskw96hfkdw.png" alt="item1">
-          </div>
-          <div class="container-item-info">
-            <span class="span-title-1">Combo g ref caramelo</span>
-            <div class="container-item-info-inner">
-              <span class="span-title-2">Combo g ref caramelo</span>
-              <div class="container-price-fee-button-more-and-less">
-                <div class="container-price-fee">
-                  <span class="span-price">R$ 51,00</span>
-                  <span class="span-fee">+ taxa R$ 5,59</span>
-                </div>
-                <div class="container-less-more-chose-bomboniere">
-                  <div class="container-less-svg-chose-bomboniere">
-                    <%= render "chose_seats_and_more_svg_partial/svg_less" %>
-                  </div>
-                  <span class="count-number-tickets-chose-bomboniere">0</span>
-                  <div class="container-more-svg-chose-bomboniere">
-                    <%= render "chose_seats_and_more_svg_partial/svg_more" %>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <% end %>
       </div>
     </div>
   </div>
