--- a/app/views/chose_seats_and_more_partial/_nav.html.erb
+++ b/app/views/chose_seats_and_more_partial/_nav.html.erb
@@ -9,12 +9,12 @@
         <div class="container-right">
           <div class="container-svg-user-login-logout">
             <%= render 'chose_seats_and_more_partial/login_or_register' %>
-            <div class="div-svg-chose-seats-and-more">
+            <div class="div-svg-head-user-chose">
               <%= render 'chose_seats_and_more_partial/svg_user_body' %>
             </div>
           </div>
-          <div class="div-svg-chose-seats-and-more">
-            <span class="span-service-chose-seats-and-more">Atendimento</span>
+          <div class="div-svg-question-mark">
+            <span class="span-service-user">Atendimento</span>
             <%= render 'chose_seats_and_more_partial/svg_question_mark' %>
           </div>
         </div>
