--- a/app/views/chose_seats_and_more_partial/_tickets.html.erb
+++ b/app/views/chose_seats_and_more_partial/_tickets.html.erb
@@ -6,7 +6,7 @@
     <p class="paragraph-clube-uol">Assinante UOL tem isenção de taxa de serviço em até 2 ingressos por mês. <span class="span-clube-uol">Saiba mais</span></p>
   </div>
   <div class="container-types-tickets">
-    <% @form_of_payments.each do | dp | %>
+    <% @form_of_payments && @form_of_payments.each do | dp | %>
       <div class="container-tickets">
         <div class="container-ticket-name-price">
           <div class="container-ticket">
