--- a/app/views/chose_seats_and_more_partial/_bomboniere.html.erb
+++ b/app/views/chose_seats_and_more_partial/_bomboniere.html.erb
@@ -6,7 +6,7 @@
     <button>Padrão</button>
   </div>
   <div class="container-all-bomboniere-items">
-    <% @additional_food_movies.each do | afm | %>
+    <% @additional_food_movies && @additional_food_movies.each do | afm | %>
       <div class="container-item-bombienere">
         <div class="container-item-img">
           <%= image_tag afm.image_main %>
