--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,14 +30,25 @@
         <h1 class="h1-custom" >Em Alta</h1>
         <div class="ms-2 me-2 carousel-custom">
           <% @movies.each_with_index do |movie, index| %>
-            <div class="col-custom col-custom<%= index + 1 %>" data-route="<%= chose_movie_theater_index_path(id: movie.id) %>">
-              <div class="card card-movie">
-                <%= image_tag movie.image_main, class: "movie-image", alt: movie.title %>
+            <% if user_signed_in? %>
+              <div class="col-custom col-custom<%= index + 1 %>" data-route="<%= chose_movie_theater_index_path(id: movie.id) %>">
+                <div class="card card-movie">
+                  <%= image_tag movie.image_main, class: "movie-image", alt: movie.title %>
+                </div>
+                <div class="custom-card-body">
+                  <h2><%= movie.title %></h2>
+                </div>
               </div>
-              <div class="custom-card-body">
-                <h2><%= movie.title %></h2>
+            <% else %>
+              <div class="col-custom col-custom<%= index + 1 %>" data-route="<%= new_user_session_path %>">
+                <div class="card card-movie">
+                  <%= image_tag movie.image_main, class: "movie-image", alt: movie.title %>
+                </div>
+                <div class="custom-card-body">
+                  <h2><%= movie.title %></h2>
+                </div>
               </div>
-            </div>
+            <% end %>
           <% end %>
         </div>
       </div>
