--- a/app/assets/stylesheets/chose_seats_and_more/index.css
+++ b/app/assets/stylesheets/chose_seats_and_more/index.css
@@ -771,14 +771,32 @@
   user-select: none;
 }
 
+.container-method-payment {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
 .container-credit-card,
 .container-debit-card,
 .container-pix,
 .container-google-pay {
+  display: flex;
+  align-items: center;
   background: rgb(33, 38, 45);
   color: #fff;
-  display: flex;
   gap: 10px;
+  border-radius: 5px;
+}
+
+.container-credit-card,
+.container-debit-card,
+.container-google-pay {
+  padding: 7px 10px;
+}
+
+.container-pix {
+  padding: 20px 20px;
 }
 
 .container-svg-credit-card {
@@ -795,7 +813,24 @@
 
 .container-svg-google-pay {
   width: 60px;
+}
 
+.container-discount-line {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.span-discount {
+  font-size: 13px;
+  color: rgb(153, 153, 153);
+}
+
+.container-line-white-discount {
+  width: 100%;
+  height: 1px;
+  background: rgb(153, 153, 153);
+  margin-top: 4px;
 }
 
 .container-back-skip {
