criando partial svg arrow up down

--- a/app/views/chose_seats_and_more/index.html.erb
+++ b/app/views/chose_seats_and_more/index.html.erb
@@ -98,6 +98,19 @@
         <span class="span-discount">Desconto</span>
         <div class="container-line-white-discount"></div>
       </div>
+      <div class="container-clube-uol">
+        <div class="container-img-clube-uol-button-arrow-down-arrow-up">
+          <div class="container-img-clube-uol">
+            <img src="https://res.cloudinary.com/dyqsqg7pk/image/upload/v1703514340/logo_header_hksemr.png" alt="clube-uol">
+          </div>
+          <div class="container-svg-arrow-down">
+            <%= render "chose_seats_and_more_svg_partial/svg_arrow_down" %>
+          </div>
+          <div class="container-svg-arrow-up">
+            <%= render "chose_seats_and_more_svg_partial/svg_arrow_up" %>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="container-back-skip">
