--- a/app/views/chose_seats_and_more/index.html.erb
+++ b/app/views/chose_seats_and_more/index.html.erb
@@ -98,16 +98,27 @@
         <span class="span-discount">Desconto</span>
         <div class="container-line-white-discount"></div>
       </div>
-      <div class="container-clube-uol">
+      <div class="container-clube-uol-payment">
         <div class="container-img-clube-uol-button-arrow-down-arrow-up">
-          <div class="container-img-clube-uol">
+          <div class="container-img-clube-uol-payment">
             <img src="https://res.cloudinary.com/dyqsqg7pk/image/upload/v1703514340/logo_header_hksemr.png" alt="clube-uol">
           </div>
-          <div class="container-svg-arrow-down">
+          <div class="container-svg-arrow-down-up">
             <%= render "chose_seats_and_more_svg_partial/svg_arrow_down" %>
           </div>
-          <div class="container-svg-arrow-up">
-            <%= render "chose_seats_and_more_svg_partial/svg_arrow_up" %>
+        </div>
+        <span class="span-subscriber-uol">Assinante UOL tem 2 ingressos por mês sem taxa de serviço. <span class="span-know-more">Saiba mais</span></span>
+      </div>
+      <div class="container-ticket-gift-card-and-arrow">
+        <div class="container-tickets-arrow">
+          <div class="container-svg-tickets-gift-card">
+            <div class="container-svg-tickets">
+              <%= render "chose_seats_and_more_svg_partial/svg_tickets_payment" %>
+            </div>
+            <span class="span-tickers-gift-card">Cupom e vale-presente</span>
+          </div>
+          <div class="container-svg-arrow-down-up-tickets-gift-card">
+            <%= render "chose_seats_and_more_svg_partial/svg_arrow_down" %>
           </div>
         </div>
       </div>
