--- a/app/views/chose_seats_and_more_partial/_all_card_for_payment_svgs.html.erb
+++ b/app/views/chose_seats_and_more_partial/_all_card_for_payment_svgs.html.erb
@@ -27,3 +27,6 @@
 <div class="container-svg-question-mark-blue-for-payment">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="injected-svg" data-src="/static/images/icons/faq.svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M12 0c6.6 0 12 5.4 12 12s-5.4 12-12 12S0 18.6 0 12 5.4 0 12 0zm.1 2.1C6.5 2 2 6.4 1.9 12s4.4 10 10 10.1h.2c5.5-.1 10-4.6 9.9-10.1-.1-5.5-4.5-9.9-9.9-9.9zm0 15c.7 0 1.3.6 1.3 1.3 0 .7-.6 1.3-1.3 1.3-.7 0-1.3-.6-1.3-1.3-.1-.7.5-1.3 1.3-1.3zm-.1-12c2.6 0 4.4 1.8 4.4 4.5 0 1.3-.7 2.7-2 3.6-.4.3-.9.5-1.3.8v1.3c0 .5-.4.9-.9.9s-.9-.4-.9-.9v-1.9c0-.4.2-.7.6-.9.2-.1.3-.1.5-.2.4-.2.8-.4 1.1-.6.3-.2 1.2-.6 1.2-2s-.7-2.6-2.5-2.6c-1.9 0-2.6 1.1-2.6 2.6 0 .5-.6.9-1.1.9-.5 0-.9-.4-.9-.9C7.4 7 9.4 5.1 12 5.1z"></path></svg>
 </div>
+<div class="container-svg-exclamation-mark-for-payment">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="injected-svg" data-src="/static/images/icons/info.svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M12 0c6.6 0 12 5.4 12 12s-5.4 12-12 12S0 18.6 0 12 5.4 0 12 0zm.1 2.1c-5.5 0-10 4.5-10 10s4.5 10 10 10 10-4.5 10-10-4.5-10-10-10zm.5 6.8c.3 0 .5.2.5.5v9.4c0 .3-.2.5-.5.5h-1c-.3 0-.5-.2-.5-.5V9.4c0-.3.2-.5.5-.5h1zm-.5-4c.7 0 1.3.6 1.3 1.3 0 .7-.6 1.3-1.3 1.3-.7 0-1.3-.6-1.3-1.3-.1-.7.6-1.3 1.3-1.3z"></path></svg>
+</div>
