--- a/app/views/chose_seats_and_more_partial/_credit_card.html.erb
+++ b/app/views/chose_seats_and_more_partial/_credit_card.html.erb
@@ -63,3 +63,10 @@
   </div>
 </div>
 <%= render "chose_seats_and_more_partial/all_card_for_payment_svgs" %>
+<div class="container-info-bottom-google-pay-for-payment">
+  <span class="span-1-info-bottom-google-pay-for-payment">Com o Google Pay é muito rápido e fácil de pagar. Ele reúne tudo que você precisa para finalizar sua compra, com as mesmas vantagens e benefícios de seus cartões físicos. E sua informação fica protegida em uma das infraestruturas de segurança mais avançadas do mundo.</span>
+  <span class="span-2-info-bottom-google-pay-for-payment">Prossiga clicando no botão Google Pay.</span>
+  <div class="container-pay-with-gpay">
+    <button id="google-pay-button">Pagar com o <img src="https://res.cloudinary.com/dyqsqg7pk/image/upload/v1714327470/GPAYFULLWHITE_gdrqhd.png" alt="gpay"></button>
+  </div>
+</div>
